# automated-testing

./: .gitignore  CMakeLists.txt  README.md  boost_auto_test_case.cpp  info.txt  remove-path  setup.sh
src_lf/: cannonball_LF.cpp  cannonball_LF.h  cannonball_viz_LF.cpp  cannonball_viz_LF.h  utilities_LF.cpp  utilities_LF.h
src_test/: cannonball.cpp  cannonball.h  cannonball_viz.cpp  cannonball_viz.h  utilities.cpp  utilities.h
